--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://lenahthoriso:oUPS6G9B9Nz9tGNP@cluster0.pecwvhp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://lenahthoriso:THORISO2@cluster0.pecwvhp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
